JavaDoc fix, unnecessary imports, unused parameters, etc.